--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css"; /*CSS do Angular Material */
+
+@import "~bootstrap/dist/css/bootstrap.css"; /*CSS do bootstrap */
