--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,20 @@
-<h1>Traning Banking</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<button mat-button (click)="openDialog()">Open dialog</button>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      Column
-    </div>
-    <div class="col-sm">
-      Column
-    </div>
-    <div class="col-sm">
-      Column
+<body>
+  <div class="container">
+    <div class="row">
+      <app-header></app-header>
+      <router-outlet></router-outlet>
+      <app-footer></app-footer>
     </div>
   </div>
-</div>
+</body>
 
+</html>
